# Parzival1918

./: .gitignore  README.md  _config.yml  about.html  blog.html  index.html  mkdocs.yml  phd.html  projects.html  publications.html  pyproject.toml
.github/workflows/: deploy.yml  deply.yml
_data/: blog.yml  contributions.yml  cv.yml  links.yml  navigation.yml  projects.yml  publications.yml
_includes/: canvas_css.html  code_css.html  cv_entry.html  footer.html  head.html  navigation.html  scripts.html
_layouts/: blog_post.html  default.html
_sass/: _bootstrap.scss
assets/css/: canvas.css  code.css  main.scss
assets/js/: decimal.js
assets/js/personal/: graphics.js
blog/: graphics_1.html  test.html
pages/: _config.yml  _toc.yml  intro.md  markdown.md
pages/pages-source/: about.md  intro.md  markdown.md  projects.md
site/: about.md  contact.md  cv.md  index.md  projects.md
site/blog/: .authors.yml
site/blog/posts/: first.md  rust_comp_chem.md  why_use_rust.md
