[project]
name = "my-website"
version = "0.1.0"
description = "My personal website"
authors = [
    { name = "Pedro Juan Royo", email = "pedro.juan.royo@gmail.com" }
]
dependencies = [
    "mkdocs-material>=9.6.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
